--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -1,3 +1,17 @@
+#login::before {
+  content: "";
+  background-image: url('/splash');
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5; /* Set opacity here */
+  z-index: -1;
+}
+
 #login {
   background: var(--surfacePrimary);
   position: fixed;
