--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -1,14 +1,14 @@
 #login::before {
   content: "";
   background-image: url('/splash');
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.5; /* Set opacity here */
+  opacity: 0.3;
   z-index: -1;
 }
 
